packages/astro/e2e/fixtures/errors/src/pages/react-runtime-error.astro
---
import ReactRuntimeError from '../components/ReactRuntimeError.jsx';
---

<div>
  <ReactRuntimeError />
</div>
